get analyse by relevetype added, chart displaying analyses values
